# cmake_nn

./: .gitignore  CMakeLists.txt  README.md  neural_network.h
include/: configuration.h  tensors.h  utils.h
include/types/: dim.h
include/utils/: nn_maths.h
src/: configuration.cpp  neural_network.cpp
src/tensors/: Tensor.cpp  TensorOperations.cpp
src/types/: dim.cpp
src/utils/: VectorUtils.cpp
src/utils/math/: matrix_multiplication_cpu.cpp  matrix_multiplication_gpu.cu
